--- a/room/style/style.css
+++ b/room/style/style.css
@@ -23,7 +23,9 @@ body{
 }
 
 .basic {
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    /* text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+     */
+     padding-bottom: 15px;
 }
 
 .light-gray-text-xl{
@@ -66,6 +68,10 @@ body{
 .black{
     color: #000000;
     font-family: 'Roboto', sans-serif;
+}
+
+.subtitle{
+    padding-top: 25px;
 }
 
 .dark-text-small{
@@ -125,12 +131,14 @@ body{
     height: 99px;
     margin: 0 auto;
     border-bottom: 1px solid #E0E0E0;
+    text-align: center;
 }
 
 .logo{
-    margin: 0 auto;
+    float: left;
     display: inline-block;
-    padding: 24px 120px;
+    padding: 24px 0;
+    margin-left: 120px;
 }
 
 .nav-large, .nav-xxs{
@@ -150,6 +158,10 @@ body{
 
 .nav-large-ul > li {
     display: inline-block;
+}
+
+.nav-large-ul > li > a{
+    display: block;
     padding: 42px 50px;
 }
 
@@ -171,12 +183,15 @@ body{
 }
 
 .main-section-img-room{
-    padding: 49px 56px;
+    margin: 49px 55px 40px 55px;
 }
 
 .main-section-img-room > img{
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+}
+
+.main-section-content{
+    margin: 40px 120px;
 }
 
 .main-section-content-title, .main-section-content-subtitle{
@@ -184,17 +199,19 @@ body{
     display: inline-block;
 }
 
-.main-section-content-subtitle{
-    float: right;
+.main-section-content-title {
+    float: left;
+    padding: 0 68px 0 55px;
 }
 
-.main-section-content{
-    padding: 31px 120px;
+.main-section-content-subtitle{
+    float: right;
+    padding-right:85px;
 }
 
 .main-section-imgs{
-    margin-top: 70px;
-    margin-bottom: 15vw;
+    margin: 70px 72px 183px 72px;
+    text-align: center;
 }
 
 .main-section-imgs-ul::after{
@@ -207,12 +224,17 @@ body{
 
 .main-section-imgs-ul > li{
     float: left;
-    margin: 32px 10px 0 32px;
+    width: 50%;
 }
 
 #room{
-    max-width: 100%;
+    min-width: 868px;
     height: auto;
+}
+
+.rooms{
+    padding-left: 7px;
+    padding-bottom: 32px;
 }
 
 .section-partners-content, .section-partners-more{
@@ -226,19 +248,21 @@ body{
 
 .section-partners-ul{
     margin: 50px 50px;
+    text-align: center;
 }
 
 .section-partners-ul > li{
     float: left;
     margin: 25px 24px;
+    width: 13.6%;
 }
 
 .section-slider{
-    margin-top: 100px;
+    margin-top: 170px;
 }
 
 .img-slider{
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
@@ -264,18 +288,21 @@ body{
 
 .section-content-ul{
     display: inline-flex;
+    justify-content: space-between;
     padding: 0;
     margin-top: 60px;
+    width: 100%;
 }
 
 .section-content-ul > li{
     text-align: left;
-    max-width: 323px;
     padding-right: 20px;
 }
 
 .li-item-img{
     margin: 0 50px;
+    min-width: 280px;
+    height: auto;
 }
 
 .li-item-title{
@@ -285,15 +312,23 @@ body{
     line-height: 24px;
     letter-spacing: 0em;
     color: #1A1A1A;
+    padding:34px 0 18px 0;
 }
 
 .main-section-reviews{
     margin: 150px 72px 20px 72px;
+    position: relative;
 }
 
 .section-review-img{
-    max-width: 88vw;
+    width: 100%;
     height: auto;
+}
+
+.position-ul {
+    position: absolute;
+    bottom: 50%;
+    left: 10%;
 }
 
 .main-section-reviews-ul > li{
@@ -313,7 +348,7 @@ body{
 }
 
 .main-section-discrab{
-    margin: 0 60px;
+    margin: 0 120px;
 }
 
 .distance{
@@ -331,35 +366,38 @@ body{
 }
 
 .direct-room{
-    float: right;
-    padding: 258px 20px;
+    float: left;
+    padding: 258px 90px;
 }
 
 .turn-on{
-    padding: 216px 20px;
+    padding: 216px 90px;
 }
 
 .water-block{
-    float: right;
-    padding: 258px 20px;
+    float: left;
+    padding: 258px 90px;
 }
 
 #direct_room{
     float: left;
-    max-width: 671px;
+    width: 50%;
     height: auto;
+    margin-left: 60px;
 }
 
 #turn_on{
     float: right;
-    max-width: 671px;
+    width: 50%;
     height: auto;
+    margin-right: 60px;
 }
 
 #water{
     float: left;
-    max-width: 671px;
+    width: 50%;
     height: auto;
+    margin-left: 60px;
 }
 
 .main-section-baground{
@@ -385,7 +423,11 @@ body{
 }
 
 .trial-ul{
-    margin: 0 200px;
+    text-align: center;
+}
+
+.title-footer{
+    margin-bottom: 17px;
 }
 
 .trial-ul > li{
